Fix footer layout on narrow screens and mobile

--- a/assets/css/mulligan.css
+++ b/assets/css/mulligan.css
@@ -1135,6 +1135,10 @@ footer p {
     width: 100%;
   }
 
+  footer .inner {
+    gap: 0;
+  }
+
   #site-footer-nav ul,
   #reading {
     display: none;
